# opensky_downloader

./: Cargo.toml  README.md
src/: db_writer.rs  downloader.rs  main.rs  models.rs  record_downloader.rs  write_db.rs
