[package]
name = "opensky_downloader"
version = "1.4.2"
edition = "2021"
description = "A tool to download OpenSky Network data and store it in a MongoDB database."

[dependencies]
bson = "2.13.0"
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
colored = "2.1.0"
csv-async = { version = "1.3.0", features = ["tokio"] }
futures = "0.3.31"
indicatif = { version = "0.17.8", features = ["tokio"] }
mongodb = "3.1.0"
reqwest = { version = "0.12.8", features = ["stream"] }
serde = { version = "1.0.213", features = ["derive"] }
tokio = { version = "1.41.0", default-features = false, features = ["sync"] }
tokio-util = { version = "0.7.12", features = ["io"] }
