[package]
name = "opensky_downloader"
version = "1.4.4"
edition = "2021"
description = "A tool to download OpenSky Network data and store it in a MongoDB database."

[dependencies]
bson = "2.13.0"
chrono = "0.4.39"
clap = { version = "4.5.28", features = ["derive"] }
colored = "3.0.0"
csv-async = { version = "1.3.0", features = ["tokio"] }
futures = "0.3.31"
indicatif = { version = "0.17.11", features = ["tokio"] }
mongodb = "3.2.1"
reqwest = { version = "0.12.12", features = ["stream"] }
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", default-features = false, features = ["sync"] }
tokio-util = { version = "0.7.13", features = ["io"] }
