[package]
name = "opensky_downloader"
version = "1.4.5"
edition = "2024"
description = "A tool to download OpenSky Network data and store it in a MongoDB database."

[dependencies]
bson = "2.14.0"
chrono = "0.4.41"
clap = { version = "4.5.38", features = ["derive"] }
colored = "3.0.0"
csv-async = { version = "1.3.1", features = ["tokio"] }
futures = "0.3.31"
indicatif = { version = "0.17.11", features = ["tokio"] }
mongodb = "3.2.3"
reqwest = { version = "0.12.15", features = ["stream"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.0", default-features = false, features = ["sync"] }
tokio-util = { version = "0.7.15", features = ["io"] }
